<?xml version="1.0"?>
<package format="2">
  <name>pan_tilt_description</name>
  <version>1.1.0</version>
  <description>The pan_tilt_description package</description>

  <maintainer email="lei.yan@iquotient-robotics.com">Lei Yan</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/I-Quotient-Robotics/iqr_pan_tilt</url>
  <url type="repository">https://github.com/I-Quotient-Robotics/iqr_pan_tilt.git</url>
  <url type="bugtracker">https://github.com/I-Quotient-Robotics/iqr_pan_tilt/issues</url>

  <author email="lei.yan@iquotient-robotics.com">Lei Yan</author>
  <author email="ye.tian@iquotient-robotics.com">Ye Tian</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
