<?xml version="1.0"?>
<package format="2">
  <name>pan_tilt_msgs</name>
  <version>1.1.0</version>
  <description>The pan_tilt_msgs package</description>

  <maintainer email="lei.yan@iquotient-robotics.com">Lei Yan</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/I-Quotient-Robotics/iqr_pan_tilt</url>
  <url type="repository">https://github.com/I-Quotient-Robotics/iqr_pan_tilt.git</url>
  <url type="bugtracker">https://github.com/I-Quotient-Robotics/iqr_pan_tilt/issues</url>

  <author email="lei.yan@iquotient-robotics.com">Lei Yan</author>
  <author email="ye.tian@iquotient-robotics.com">Ye Tian</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
